--- a/.github/workflows/dispatch-change-in-submodule.yaml
+++ b/.github/workflows/dispatch-change-in-submodule.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Send repository_dispatch to main repo
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.MAIN_REPO_PAT }}
+          token: ${{ secrets.REPO_PAT }}
           repository: tbd-5m/main
           event-type: submodule-updated
           client-payload: '{"submodule": "${{ inputs.submodule_name }}"}'
