add missing secret input

--- a/.github/workflows/dispatch-change-in-submodule.yaml
+++ b/.github/workflows/dispatch-change-in-submodule.yaml
@@ -6,6 +6,9 @@ on:
       submodule_name:
         required: true
         type: string
+    secrets:
+      REPO_PAT:
+        required: true
 
 jobs:
   notify:
