--- a/.github/workflows/escrow-resource.yaml
+++ b/.github/workflows/escrow-resource.yaml
@@ -18,6 +18,14 @@ jobs:
       - name: Checkout this repo
         uses: actions/checkout@v4
 
+      - name: Install XVFB
+        run: sudo apt-get install -y xvfb
+
+      - name: Start XVFB
+        run: |
+          export DISPLAY=':99.0'
+          Xvfb :99 -screen 0 1920x1080x24 &
+        
       - name: Clone escrower script
         run: |
           git clone https://x-access-token:${{ secrets.REPO_PAT }}@github.com/tbd-5m/gh-resource-escrower.git escrower
