--- a/.github/workflows/escrow-resource.yaml
+++ b/.github/workflows/escrow-resource.yaml
@@ -37,7 +37,7 @@ jobs:
             -x "${{ inputs.submodule_name }}.zip"
 
       - name: Run escrower upload script
-        run: npx ts-node escrower/upload.ts ${{ inputs.submodule_name }} "${{ inputs.submodule_name }}.zip
+        run: npx ts-node escrower/upload.ts ${{ inputs.submodule_name }} "${{ inputs.submodule_name }}.zip"
 
       - name: Dispatch to escrowed repo
         uses: peter-evans/repository-dispatch@v2
